--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "engines": {
-    "node": "11.9.5"
-  },
   "name": "16lesson",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://arynazaiko.github.io/songs/",
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "gh-pages": "^2.0.1",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
@@ -21,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
